@@ -101,14 +101,14 @@ public:
     */
     void getServerInfo(ServerInfo&) const;
     
-    SigC::Signal0<void> GotServerInfo;
+    sigc::signal<void> GotServerInfo;
     
 ///////////////////////
 	
     /** Emitted when the disconnection process is initiated. The argument
     is a flag indicating if the disconnection was clean or not.
     */
-    SigC::Signal0<bool> Disconnecting;
+    sigc::signal<bool> Disconnecting;
     
     /**
     Emitted when a non-fatal error occurs. Tthese are nearly always network
@@ -116,13 +116,13 @@ public:
     connection will be placed into the DISCONNECTED state after the signal
     is emitted; thus the current state (when the failure occured) is still valid
     during the callback */
-    SigC::Signal1<void, const std::string&> Failure;
+    sigc::signal<void, const std::string&> Failure;
     
     /// indicates a status change on the connection
     /** emitted when the connection status changes; This will often
     correspond to the emission of a more specific signal (such as Connected),
     which should be used where available. */
-    SigC::Signal1<void, Status> StatusChanged;
+    sigc::signal<void, Status> StatusChanged;
 
 protected:
 	/// update the connection status (and emit the appropriate signal)
