@@ -13,7 +13,7 @@
 
 #include <Atlas/Objects/Operation.h>
 #include <Atlas/Objects/RootEntity.h>
-#include <sigc++/object_slot.h>
+#include <sigc++/slot.h>
 
 #include <cassert>
 #include <cstdio>
@@ -57,7 +57,7 @@ Meta::Meta(const std::string& metaServer, unsigned int maxQueries) :
     m_maxActiveQueries(maxQueries),
     m_stream(NULL)
 {
-    Poll::instance().Ready.connect(SigC::slot(*this, &Meta::gotData));
+    Poll::instance().Ready.connect(sigc::mem_fun(this, &Meta::gotData));
 }
 
 Meta::~Meta()
@@ -196,7 +196,7 @@ void Meta::connect()
     // check for meta-server timeouts; this is going to be
     // fairly common as long as the protocol is UDP, I think
     m_timeout.reset( new Timeout("meta_ckeepalive_"+m_metaHost, this, 8000) );
-    m_timeout->Expired.connect(SigC::slot(*this, &Meta::metaTimeout));
+    m_timeout->Expired.connect(sigc::mem_fun(this, &Meta::metaTimeout));
 }
 
 void Meta::disconnect()
@@ -394,7 +394,7 @@ void Meta::listReq(int base)
     else
     {
         m_timeout.reset( new Timeout("meta_list_req", this, 8000) );
-        m_timeout->Expired.connect(SigC::slot(*this, &Meta::metaTimeout));
+        m_timeout->Expired.connect(sigc::mem_fun(this, &Meta::metaTimeout));
     }
 }
 
